# QRLtoDatabase

./: .gitignore  LICENSE  Pipfile  QRLtoDB.py  README.md  pyproject.toml
QRLtoDatabase.git/: config  packed-refs
analytics/: blockDataAnalytics.py
databases/: mongodb.py  neo4j.py  postgresql.py  sqlite.py
utils/: getData.py  sqlQueries.py
utils/bootstrap/: CreateQRLBootstrap.sh  verify_leveldb.py
