[tool.poetry]
name = "qrltodatabase"
version = "0.1.0"
description = ""
authors = ["12Remember"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
plyvel = "^1.4.0"
qrl = "^4.0.2"
psycopg2-binary = "^2.9.6"
pandas = "^1.2.3"
pymongo = "^4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
